--- a/dockerfile2
+++ b/dockerfile2
@@ -2,15 +2,6 @@ FROM postgres:latest
 
 ENV POSTGRES_DB=testdatabase2
 ENV POSTGRES_USER=testuser2
-
-
-COPY super_secret_pass.txt /super_secret_pass.txt
-
-
-RUN chmod 755 /super_secret_pass.txt && \
-    export POSTGRES_PASSWORD=$(cat /super_secret_pass.txt)
-
-
-
+ENV POSTGRES_PASSWORD=123
 
 EXPOSE 5432
