--- a/dockerfile1
+++ b/dockerfile1
@@ -1,7 +1,7 @@
 FROM postgres:latest
 
-ENV POSTGRES_DB=testdatabase1
-ENV POSTGRES_USER=testuser1
-ENV POSTGRES_PASSWORD=111
+ENV POSTGRES_DB=testdatabase
+ENV POSTGRES_USER=testuser
+ENV POSTGRES_PASSWORD=123
 
 EXPOSE 5432
