--- a/dockerfile2
+++ b/dockerfile2
@@ -1,7 +1,7 @@
-FROM postgres:latest
+FROM postgres:14.19
 
-ENV POSTGRES_DB=testdatabase2
-ENV POSTGRES_USER=testuser2
+ENV POSTGRES_DB=testdatabase
+ENV POSTGRES_USER=testuser
 ENV POSTGRES_PASSWORD=123
 
 EXPOSE 5432
