--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,63 @@ services:
       dockerfile: dockerfile1
     networks:
       net1:
-        ipv4_address: 10.30.34.70
+        ipv4_address: 10.30.34.71
     ports:
       - "5432:5432"
     volumes:
-      - ./super_secret_pass.txt:/super_secret_pass.txt
+      - postgres1:/var/lib/postgresql/18/docker
+      - ./pg_hba1/pg_hba.conf:/var/lib/postgresql/18/docker/pg_hba.conf
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD1}
 
   postgres2:
     build:
       context: .
-      dockerfile: Dockerfile2
+      dockerfile: dockerfile2
     networks:
       net2:
-        ipv4_address: 10.74.87.132
+        ipv4_address: 10.74.87.133
     ports:
       - "5433:5432"
     volumes:
-      - ./super_secret_pass.txt:/super_secret_pass.txt
+      - postgres2:/var/lib/postgresql/18/docker
+      - ./pg_hba2/pg_hba.conf:/var/lib/postgresql/18/docker/pg_hba.conf
+
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD2}
+
+  pgadmin1:
+    image: elestio/pgadmin:REL-9_6
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin1@tera.com
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD1}
+      PGADMIN_SERVER_JSON_FILE: /pgadmin4/servers.json
+
+    ports:
+      - "8081:80"
+    volumes:
+      - ./postgres1/servers.json:/pgadmin4/servers.json
+    networks:
+      net1:
+        ipv4_address: 10.30.34.70
+
+  pgadmin2:
+    image: elestio/pgadmin:REL-9_6
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin2@tera.com
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD2}
+      PGADMIN_SERVER_JSON_FILE: /pgadmin4/servers.json
+
+    ports:
+      - "8082:80"
+    volumes:
+      - ./postgres2/servers.json:/pgadmin4/servers.json
+
+    networks:
+       net2:
+        ipv4_address: 10.74.87.132
 
 networks:
   net1:
@@ -36,3 +76,7 @@ networks:
     ipam:
       config:
         - subnet: 10.74.87.0/24
+
+volumes:
+  postgres1: {}
+  postgres2: {}
