--- a/dockerfile1
+++ b/dockerfile1
@@ -1,15 +1,8 @@
-FROM postgres:latest
+FROM postgres:18.1
 
-ENV POSTGRES_DB=testdatabase1
-ENV POSTGRES_USER=testuser1
-
-
-COPY super_secret_pass.txt /super_secret_pass.txt
-
-
-RUN chmod 755 /super_secret_pass.txt && \
-    export POSTGRES_PASSWORD=$(cat /super_secret_pass.txt)
-
+ENV POSTGRES_DB=testdatabase
+ENV POSTGRES_USER=testuser
+ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD1}
 
 
 
